--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chrome extension</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <input type="text" name="save" id="input-el">
