Create element,Adding  and clearing input

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <input type="text" name="save" id="input-el">
     <button id="input-btn">SAVE INPUT</button>
+    <ul id="unordered">
+
+    </ul>
     <script src="main.js"></script>
 </body>
 </html>
