--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <input type="text" name="save" id="input-el">
     <button id="input-btn">SAVE INPUT</button>
+    <button id="delete-all">DELETE ALL</button>
     <ul id="unordered">
-
     </ul>
     <script src="main.js"></script>
 </body>
