--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <input type="text" name="save" id="input-el">
     <button id="input-btn">SAVE INPUT</button>
+    <button id="save-tab">SAVE TAB</button>
     <button id="delete-all">DELETE ALL</button>
     <ul id="unordered">
     </ul>
